Can add/edit/delete emails, phones, addresses
